--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
   <script type="text/javascript" th:src="@{/js/basic.js}"></script>
 
-  <title>예약완료 페이지</title>
+  <title>마이 페이지</title>
 
 </head>
 
