Feat : 캐시 적용에 따른 html수정
로그아웃, 마이페이지, 닉네임 표시, 캐시적 버튼 적용

Resolved : #64

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -33,9 +33,6 @@
   <nav class="col-8">
     <ul class="nav justify-content-end" style="margin-right: 50px">
       <li class="nav-item">
-        <a class="nav-link" href="/neticket/user" style="color: black">마이페이지</a>
-      </li>
-      <li class="nav-item">
       <a class="nav-link" href="/neticket/login" style="color: black">로그인</a>
       </li>
       <li class="nav-item">
@@ -107,6 +104,35 @@
 
     // 1초마다 남은 시간을 갱신하는 타이머를 시작합니다.
     setInterval(updateRemainingTime, 1000);
+
+    const authToken = getCookie('Authorization');
+
+    if (authToken) {
+      // 인증 토큰이 있으면 사용자 권한 정보를 확인
+      const payload = JSON.parse(atob(authToken.split('.')[1]));
+      const userRole = payload.auth;
+      const userNickname = payload.sub;
+      console.log(userRole)
+
+      // 회원가입 링크의 텍스트를 사용자 닉네임으로 변경
+      const signupLink = document.querySelector('.nav-link[href="/neticket/signup"]');
+      signupLink.innerText = userNickname;
+      signupLink.href = '/neticket/user';
+
+      // 인증 토큰이 있는 경우, 로그아웃 버튼으로 변경
+      const loginButton = document.querySelector('.nav-link[href="/neticket/login"]');
+      loginButton.innerText = '로그아웃';
+      loginButton.addEventListener('click', function (event) {
+        // 로그아웃 처리
+        event.preventDefault();
+        document.cookie = 'Authorization=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        window.location.href = '/neticket/';
+      });
+    } else {
+      // 인증 토큰이 없는 경우, 로그인 버튼으로 변경
+      const loginButton = document.querySelector('.nav-link[href="/neticket/login"]');
+      loginButton.innerText = '로그인';
+    }
   });
 </script>
 </html>
