--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,10 +34,11 @@
   <nav class="col-8">
     <ul class="nav justify-content-end" style="margin-right: 50px">
       <li class="nav-item">
-      <a class="nav-link" href="/neticket/user" style="color: black">마이페이지</a>
+        <a class="nav-link" href="/neticket/admin/event" style="color: black; display: none">공연
+          추가</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href="/neticket/login" style="color: black">로그인</a>
+        <a class="nav-link" href="/neticket/login" style="color: black">로그인</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/neticket/signup" style="color: black">회원가입</a>
@@ -87,6 +88,42 @@
 <script>
   $(document).ready(function () {
     showEvent(1);
+    const authToken = getCookie('Authorization');
+
+    if (authToken) {
+      // 인증 토큰이 있으면 사용자 권한 정보를 확인
+      const payload = JSON.parse(atob(authToken.split('.')[1]));
+      const userRole = payload.auth;
+      const userNickname = payload.sub;
+      console.log(userRole)
+
+      // 회원가입 링크의 텍스트를 사용자 닉네임으로 변경
+      const signupLink = document.querySelector('.nav-link[href="/neticket/signup"]');
+      signupLink.innerText = userNickname;
+      signupLink.href = '/neticket/user';
+
+      // 사용자 권한에 따라 공연 추가 버튼을 보이거나 숨김
+      if (userRole === 'ADMIN') {
+        document.querySelector('.nav-link[href="/neticket/admin/event"]').style.display = 'block';
+      } else {
+        document.querySelector('.nav-link[href="/neticket/admin/event"]').style.display = 'none';
+      }
+
+      // 인증 토큰이 있는 경우, 로그아웃 버튼으로 변경
+      const loginButton = document.querySelector('.nav-link[href="/neticket/login"]');
+      loginButton.innerText = '로그아웃';
+      loginButton.addEventListener('click', function (event) {
+        // 로그아웃 처리
+        event.preventDefault();
+        document.cookie = 'Authorization=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+        window.location.href = '/neticket/';
+      });
+    } else {
+      // 인증 토큰이 없는 경우, 로그인 버튼으로 변경
+      const loginButton = document.querySelector('.nav-link[href="/neticket/login"]');
+      loginButton.innerText = '로그인';
+    }
+
   });
   $(document).on('click', '.col', function () {
     let eventIdString = $(this).data('event-id');
