--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 <body>
-<h1>NETicket</h1>
+<h1><a href="/neticket" style="text-decoration: none;color: black;">NETicket</a></h1>
 <div id="login-form">
   <h2>LOGIN</h2>
   <div class="mb-3">
