--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -11,7 +11,10 @@
         crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
 
   <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -58,25 +61,33 @@
   </div>
   <h5 class="infoDesc id" , style="overflow: hidden"></h5>
   <ul class="info" style="margin-top: 100px; margin-left: 100px">
-    <li class="infoItem"><strong class="infoLabel">제목</strong>
-      <div class="infoDesc title"></div>
-    </li>
-    <li class="infoItem"><strong class="infoLabel">장소</strong>
-      <div class="infoDesc place"></div>
-    </li>
-    <li class="infoItem"><strong class="infoLabel">공연 날짜</strong>
-      <div class="infoDesc date"></div>
-    </li>
-    <li class="infoItem"><strong class="infoLabel">가격</strong>
-      <div class="infoDesc price"></div>
-    </li>
-    <select name="ticketCount" id="ticketCount">
-      <option value="1">1장</option>
-      <option value="2">2장</option>
-      <option value="3">3장</option>
-      <option value="4">4장</option>
-    </select>
-    <button id="bookingButton" onclick="saveReservation()">예매하기</button>
+    <section class="infoSection">
+      <li class="infoItem">
+        <strong class="infoLabel">제목</strong>
+        <div class="infoDesc title"></div>
+      </li>
+      <li class="infoItem">
+        <strong class="infoLabel">장소</strong>
+        <div class="infoDesc place"></div>
+      </li>
+      <li class="infoItem">
+        <strong class="infoLabel">공연 날짜</strong>
+        <div class="infoDesc date"></div>
+      </li>
+      <li class="infoItem">
+        <strong class="infoLabel">가격</strong>
+        <div class="infoDesc price"></div>
+      </li>
+    </section>
+    <section class="infoSection">
+      <select name="ticketCount" id="ticketCount">
+        <option value="1">1장</option>
+        <option value="2">2장</option>
+        <option value="3">3장</option>
+        <option value="4">4장</option>
+      </select>
+      <button id="bookingButton" onclick="saveReservation()">예매하기</button>
+    </section>
   </ul>
 </div>
 </body>
