Style: 공연추가 CSS HTML 변경
Related to: #69

--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- Bootstrap JavaScript -->
@@ -42,28 +43,28 @@
       </ul>
     </nav>
   </div>
-  <form action="#" method="get" class="search-container">
-    <input type="text" placeholder="검색">
-    <input type="submit" value="검색">
-  </form>
-  <div class="input-group">
-    <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-      <option selected>Left Seats 캐시 목록</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-    <button type="button" class="btn btn-danger" id="deleteButton">삭제</button>
-    <button type="button" class="btn btn-info" id="refreshButton">갱신</button>
-  </div>
-  <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="캐시를 생성할 공연 번호를 입력하세요."
-           aria-label="Recipient's username" id="cacheSave" aria-describedby="button-addon2">
-    <button class="btn btn-outline-secondary" onclick="cacheEventAdd()" type="button" id="button-addon2">생성</button>
-  </div>
   <div class="row">
-    <div class="col-10">
+    <div class="event-form-container">
       <form id="eventForm" method="post" enctype="multipart/form-data">
+        <div class="input-group">
+          <select class="form-select" id="inputGroupSelect04"
+                  aria-label="Example select with button addon">
+            <option selected>Left Seats 캐시 목록</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+          </select>
+          <button type="button" class="btn btn-danger" id="deleteButton">삭제</button>
+          <button type="button" class="btn btn-info" id="refreshButton">갱신</button>
+        </div>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="캐시를 생성할 공연 번호를 입력하세요."
+                 aria-label="Recipient's username" id="cacheSave" aria-describedby="button-addon2">
+          <button class="btn btn-outline-secondary" onclick="cacheEventAdd()" type="button"
+                  id="button-addon2">생성
+          </button>
+        </div>
+
         <div class="form-group">
           <label for="title">제목</label>
           <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요">
@@ -94,6 +95,7 @@
           <input type="file" class="form-control-file" id="image" name="image">
         </div>
         <button type="submit" class="btn btn-primary" id="saveButton">저장</button>
+      </form>
       </form>
     </div>
   </div>
