--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,6 +7,7 @@ body {
   background-color: #f8f9fa; /* 배경색 변경 */
 }
 
+
 .card-img-top {
   width: 100%;
   height: 250px; /* 원하는 높이를 설정하세요 */
@@ -177,3 +178,42 @@ footer {
   grid-gap: 20px;
 }
 
+#eventForm {
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+.form-control-file {
+  margin-top: 10px;
+}
+
+#saveButton {
+  float: right;
+  width: 120px;
+}
+
+.event-form-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+#eventForm {
+  width: 90%;
+  max-width: 800px;
+}
+
+label {
+  font-size: 1.1rem; /* 원하는 글씨 크기로 변경 */
+}
