Design: 예매중 페이지 HTML, CSS 개선
Related to: #69

--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -59,6 +59,11 @@
       <a href="#" class="list-group-item list-group-item-action">뮤지컬</a>
     </div>
   </div>
+  <div class="image-container" style="margin-left: 150px; margin-top: 50px">
+    <img class="image"
+         src="" alt=""
+         width="100%" HEIGHT="70%">
+  </div>
   <h5 class="infoDesc id" , style="overflow: hidden"></h5>
   <ul class="info" style="margin-top: 100px; margin-left: 100px">
     <section class="infoSection">
