--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -58,8 +58,47 @@
       <a href="#" class="list-group-item list-group-item-action">뮤지컬</a>
     </div>
   </div>
-  <div class="card" id="getresv">
-
+  <div class="image-container" style="margin-left: 150px; margin-top: 50px">
+    <img class="image"
+         src="" alt=""
+         width="100%" HEIGHT="70%">
+  </div>
+  <div class="card reservation-card" id="getresv">
+    <ul class="info">
+      <h5 class="reservation-header">예매완료</h5>
+      <li class="reservation-info-item">
+        <strong class="reservation-info-label">예매 번호 : </strong>
+        <div class="infoDesc id" id="resvId"></div>
+      </li>
+      <li class="reservation-info-item">
+        <strong class="reservation-info-label">공연 제목 : </strong>
+        <div class="infoDesc title"></div>
+      </li>
+      <li class="reservation-info-item">
+        <strong class="reservation-info-label">공연 장소 : </strong>
+        <div class="infoDesc place">
+          <p class="reservation-info-text"></p>
+        </div>
+      </li>
+      <li class="reservation-info-item">
+        <strong class="reservation-info-label">공연 날짜 : </strong>
+        <div class="infoDesc date">
+          <p class="reservation-info-text"></p>
+        </div>
+      </li>
+      <li class="reservation-info-item">
+        <strong class="reservation-info-label">가격 : </strong>
+        <div class="infoDesc totalPrice">
+          <p class="reservation-info-text"></p>
+        </div>
+      </li>
+      <li class="reservation-info-item">
+        <strong class="reservation-info-label">매수 : </strong>
+        <div class="infoDesc count">
+          <p class="reservation-info-text"></p>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
 </body>
