Feat : 서버응답시간 측정 aop 구현
서버 응답시간 측정 aop 구현
admin 컨트롤러 생성해서 reservation 컨트롤러 분리
html에 응답시간 받아주는 함수 생성

Related to: #73

--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -51,6 +51,7 @@
 <div style="display: flex; margin-right: 20px" col-2>
   <div style="margin-left: 50px; margin-top: 50px; margin-right: 20px" class="col-2">
     <p>Category</p>
+    <p id="responseTime">응답시간</p>
     <div class="list-group" style="width: 100%; height: 100%">
       <a href="#" class="list-group-item list-group-item-action">공연</a>
       <a href="#" class="list-group-item list-group-item-action">영화</a>
@@ -105,6 +106,10 @@
 <script>
   $(document).ready(function () {
     showReservationCompleted();
+    let responseTime = localStorage.getItem('responseTime');
+    if (responseTime) {
+      $('#responseTime').text(`예매 응답시간 : ${responseTime} ms`);
+    }
     const authToken = getCookie('Authorization');
 
     if (authToken) {
