Design: 전체 HTML, CSS 개선
Related to: #69

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #000;
   height: 100%;
-  background-color: #f8f9fa; /* 배경색 변경 */
+  background-color: #f6f6f6; /* 배경색 변경 */
 }
 
 
@@ -25,7 +25,6 @@ body {
 
 .search-container {
   display: flex;
-  justify-content: center;
 }
 
 .search-container input[type="text"] {
@@ -34,7 +33,7 @@ body {
   margin-right: 10px;
   font-size: 16px;
   margin-bottom: 50px;
-  width: 400px;
+  width: 500px;
 }
 
 .search-container input[type="submit"] {
@@ -42,7 +41,7 @@ body {
   border: none;
   border-radius: 5px;
   margin-bottom: 50px;
-  background-color: #007bff;
+  background-color: #e15561;
   color: white;
   font-size: 16px;
   cursor: pointer;
@@ -119,16 +118,13 @@ footer {
 }
 
 #bookingButton {
-  background-color: blue;
+  background-color: #dc3545;
   color: white;
   font-weight: bold;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-
-#bookingButton {
   font-size: 15px;
   width: 100%;
 }
@@ -164,6 +160,18 @@ footer {
   flex: 0 0 20%;
   max-width: 20%;
   margin-right: 30px;
+}
+
+.card-body {
+  flex: 1 1 auto;
+  padding: 1rem 1rem;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+.card-title {
+  margin-bottom: .5rem;
+  font-weight: bold;
+  font-family: 'Nanum Gothic';
 }
 
 .card-container {
@@ -250,4 +258,205 @@ label {
 .reservation-info-text {
   display: inline;
 }
+
+/* pagination 스타일 커스텀 */
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination .page-item {
+  margin: 0 5px;
+}
+
+.pagination .page-link {
+  color: #e15561;
+  background-color: #fff;
+  border: 1px solid #dc3545;
+}
+
+.pagination .page-link:hover {
+  color: #fff;
+  background-color: #e15561;
+  border: 1px solid #dc3545;
+}
+
+.pagination .page-link:focus {
+  box-shadow: 0 0 0 0.2rem rgba(255, 43, 43, 0.5);
+}
+
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #e15561;
+}
+
+.list-group {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  border-radius: 1rem;
+}
+
+/*카드슬라이드*/
+
+#carouselExampleInterval {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.carousel-item img {
+  max-height: 400px;
+  object-fit: cover;
+}
+
+
+
+
+
+
+
+/***/
+/*{*/
+/*  -webkit-box-sizing: border-box;*/
+/*  box-sizing: border-box;*/
+/*}*/
+
+/*h5*/
+/*{*/
+/*  margin:0px;*/
+/*  font-size:1.4em;*/
+/*  font-weight:700;*/
+/*}*/
+
+/*p*/
+/*{*/
+/*  font-size:12px;*/
+/*}*/
+
+.center
+{
+  height:100vh;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* End Non-Essential  */
+
+.property-card
+{
+  height:18em;
+  width:14em;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient:vertical;
+  -webkit-box-direction:normal;
+  -ms-flex-direction:column;
+  flex-direction:column;
+  position:relative;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  border-radius:16px;
+  overflow:hidden;
+  -webkit-box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
+  box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
+}
+/* ^-- The margin bottom is necessary for the drop shadow otherwise it gets clipped in certain cases. */
+
+/* Top Half of card, image. */
+
+.property-image
+{
+  height:6em;
+  width:14em;
+  padding:1em 2em;
+  position:Absolute;
+  top:0px;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  background-image:url('https://cdn.photographylife.com/wp-content/uploads/2017/01/What-is-landscape-photography.jpg');
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+
+/* Bottom Card Section */
+
+.property-description
+{
+  background-color: #FAFAFC;
+  height:12em;
+  width:14em;
+  position:absolute;
+  bottom:0em;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  padding: 0.5em 1em;
+  text-align:center;
+}
+
+/* Social Icons */
+
+.property-social-icons
+{
+  width:1em;
+  height:1em;
+  background-color:black;
+  position:absolute;
+  bottom:1em;
+  left:1em;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+/* Property Cards Hover States */
+
+.property-card:hover .property-description
+{
+  height:0em;
+  padding:0px 1em;
+}
+.property-card:hover .property-image
+{
+  height:18em;
+}
+
+.property-card:hover .property-social-icons
+{
+  background-color:white;
+}
+
+.property-card:hover .property-social-icons:hover
+{
+  background-color:blue;
+  cursor:pointer;
+}
+
+
+.property-image-title
+{
+text-align:center;
+position:Relative;
+top:30%;
+opacity:0;
+transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;
+color:black;
+font-size:1.2em;
+}
+
+.property-card:hover .property-image-title
+{
+opacity:1;
+}
+
+
+
 
